bug fix on server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon server/index.js",
+    "serve": "node server/index.js",
     "deploy": "scripts/deploy",
     "build-watch": "webpack -w",
     "start": "npm run build-watch & npm run serve",
